<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (c) 2023, 2025 Obeo.
 This program and the accompanying materials
 are made available under the terms of the Eclipse Public License v2.0
 which accompanies this distribution, and is available at
 https://www.eclipse.org/legal/epl-2.0/

 SPDX-License-Identifier: EPL-2.0

 Contributors:
     Obeo - initial API and implementation
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.eclipse.syson</groupId>
	<artifactId>syson-services</artifactId>
	<version>2025.8.1</version>
	<name>syson-services</name>
	<description>SysON Services</description>

	<properties>
		<java.version>17</java.version>
		<sirius.web.version>2025.8.2</sirius.web.version>
		<antlr.version>4.10.1</antlr.version>
	</properties>

	<repositories>
		<repository>
			<id>Central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>github-sirius-web</id>
			<url>https://maven.pkg.github.com/eclipse-sirius/sirius-web</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/eclipse-syson/syson</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-emf</artifactId>
			<version>${sirius.web.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-diagrams</artifactId>
			<version>${sirius.web.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-diagrams</artifactId>
			<version>${sirius.web.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-view</artifactId>
			<version>${sirius.web.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-view-builder</artifactId>
			<version>${sirius.web.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.syson</groupId>
			<artifactId>syson-sysml-metamodel</artifactId>
			<version>2025.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.syson</groupId>
			<artifactId>syson-direct-edit-grammar</artifactId>
			<version>2025.8.1</version>
		</dependency>
		<!-- Tests -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Import test jar to access org.eclipse.syson.sysml.util -->
		<dependency>
			<groupId>org.eclipse.syson</groupId>
			<artifactId>syson-sysml-metamodel</artifactId>
			<version>2025.8.1</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<configLocation>../../releng/syson-resources/checkstyle/CheckstyleConfiguration.xml</configLocation>
					<sourceDirectories>
						<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory> 
						<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory> 
					</sourceDirectories>
					<failsOnError>true</failsOnError>
					<consoleOutput>true</consoleOutput>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
